// src/main/proto/service.proto
syntax = "proto3";

package example;

option java_multiple_files = true;
option java_package = "com.example.grpc.proto";
option java_outer_classname = "GreeterProto";

// The greeting service definition
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  
  // Sends multiple greetings
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greeting
message HelloReply {
  string message = 1;
  int32 greeting_count = 2;
}